# nitrate

./: .gitattributes  .gitignore  Cargo.toml  agents.md  miner.example.toml  miner.tuned.toml  readme.md  roadmap.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
bins/nitrate-cli/: Cargo.toml
bins/nitrate-cli/src/: main.rs
bins/nitrate-devtool/: Cargo.toml
bins/nitrate-devtool/src/: main.rs
crates/nitrate-bench/: Cargo.toml
crates/nitrate-bench/benches/: sha2_ref.rs
crates/nitrate-bench/src/: lib.rs
crates/nitrate-btc/: Cargo.toml
crates/nitrate-btc/src/: lib.rs
crates/nitrate-config/: Cargo.toml
crates/nitrate-config/src/: lib.rs
crates/nitrate-core/: Cargo.toml
crates/nitrate-core/src/: lib.rs
crates/nitrate-gpu-api/: Cargo.toml
crates/nitrate-gpu-api/src/: lib.rs
crates/nitrate-gpu-cuda/: Cargo.toml  build.rs
crates/nitrate-gpu-cuda/kernels/: sha256d.cu
crates/nitrate-gpu-cuda/src/: gpu_config.rs  lib.rs
crates/nitrate-gpu-dummy/: Cargo.toml
crates/nitrate-gpu-dummy/src/: lib.rs
crates/nitrate-metrics/: Cargo.toml
crates/nitrate-metrics/src/: lib.rs
crates/nitrate-pool/: Cargo.toml
crates/nitrate-pool/src/: lib.rs
crates/nitrate-proto/: Cargo.toml
crates/nitrate-proto/src/: lib.rs
crates/nitrate-utils/: Cargo.toml
crates/nitrate-utils/src/: lib.rs
script/: run-optimised.sh
scripts/: run-miner.sh  version.sh
