[workspace]
members = ["crates/*", "bins/*"]
resolver = "2"

[workspace.package]
version = "0.1.5"
edition = "2021"
license = "GPL-3.0-or-later"
authors = ["Your Name <you@example.com>"]
repository = "https://github.com/grenade/nitrate"
homepage = "https://github.com/grenade/nitrate"

[workspace.lints.rust]
rust_2018_idioms = "deny"
unreachable_pub = "deny"

[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"
strip = "symbols"
