[package]
name = "nitrate-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
tokio = { version = "1.39", features = ["rt-multi-thread", "macros", "time", "signal"] }
tracing = "0.1"
nitrate-gpu-api = { path = "../nitrate-gpu-api" }
nitrate-gpu-dummy = { path = "../nitrate-gpu-dummy", optional = true }
nitrate-pool = { path = "../nitrate-pool" }
nitrate-metrics = { path = "../nitrate-metrics" }
nitrate-config = { path = "../nitrate-config" }
thiserror = "1.0"

[features]
default = ["gpu-dummy"]
gpu-dummy = ["dep:nitrate-gpu-dummy"]