[package]
name = "nitrate-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
tokio = { version = "1.39", features = ["rt-multi-thread", "macros", "time", "signal"] }
tracing = "0.1"
nitrate-gpu-api = { path = "../nitrate-gpu-api" }
nitrate-btc = { path = "../nitrate-btc" }
nitrate-gpu-dummy = { path = "../nitrate-gpu-dummy", optional = true }
nitrate-pool = { path = "../nitrate-pool" }
nitrate-metrics = { path = "../nitrate-metrics" }
nitrate-config = { path = "../nitrate-config" }
nitrate-gpu-cuda = { path = "../nitrate-gpu-cuda", optional = true }
thiserror = "1.0"

[features]
default = ["gpu-dummy"]
gpu-dummy = ["dep:nitrate-gpu-dummy"]
gpu-cuda = ["dep:nitrate-gpu-cuda", "nitrate-gpu-cuda/cuda"]
gpu-cuda-stub = ["dep:nitrate-gpu-cuda", "nitrate-gpu-cuda/cuda-stub"]
