[package]
name = "nitrate-metrics"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0"
hyper = { version = "0.14", features = ["server", "http1", "tcp"] }
prometheus = "0.13"
tokio = { version = "1.39", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
