[package]
name = "nitrate-metrics"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0"
hyper = { version = "1.7", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["server", "http1", "tokio"] }
http-body-util = "0.1"
bytes = "1.5"
http = "1.1"
prometheus = "0.13"
tokio = { version = "1.39", features = ["rt-multi-thread", "macros", "net"] }
tracing = "0.1"
