[package]
name = "nitrate-pool"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0"
tokio = { version = "1.39", features = ["net", "io-util", "time", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
nitrate-proto = { path = "../nitrate-proto" }
thiserror = "1.0"