[package]
name = "nitrate-pool"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0"
tokio = { version = "1.39", features = ["net", "io-util", "time", "rt-multi-thread", "sync", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
nitrate-proto = { path = "../nitrate-proto" }
thiserror = "1.0"
tokio-rustls = { version = "0.25", optional = true }
rustls = { version = "0.23", default-features = false, features = ["std", "tls12"], optional = true }
rustls-native-certs = { version = "0.7", optional = true }

[features]
default = []
tls-rustls = ["dep:tokio-rustls", "dep:rustls", "dep:rustls-native-certs"]
