[package]
name = "nitrate-proto"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.39", features = ["net", "io-util", "time"] }
bytes = "1.6"
thiserror = "1.0"
tracing = "0.1"